# SDIZO_1

./: AutoTests.cpp  AutoTests.h  BST.cpp  BST.h  CMakeLists.txt  DynamicArray.cpp  DynamicArray.h  Heap.cpp  Heap.h  List.cpp  List.h  ListNode.cpp  ListNode.h  Node.cpp  Node.h  Tests.cpp  Tests.h  Time.cpp  Time.h  dataFile.txt  main.cpp
