cmake_minimum_required(VERSION 3.24)
project(Project_1)

set(CMAKE_CXX_STANDARD 17)

add_executable(Project_1
        AutoTests.cpp
        AutoTests.h
        BST.cpp
        BST.h
        DynamicArray.cpp
        DynamicArray.h
        Heap.cpp
        Heap.h
        List.cpp
        List.h
        ListNode.cpp
        ListNode.h
        main.cpp
        Node.cpp
        Node.h
        Tests.cpp
        Tests.h
        Time.cpp
        Time.h)